bugs overlaps

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17165,10 +17165,9 @@ body:not(.no-transition) #wrapper,
 
  @media (min-width: 768px) {
     .spost{
-        height: 60px;
+        height: 100px;
         display: flex;
         justify-content: center;
-        align-items: center;
         flex-direction: column;
      }
      
